Layout bug on mobile fixes

--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   background: var(--background);
   margin: 0;
   padding: 0;
